--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ document.addEventListener('DOMContentLoaded', function() {
             Alors, vous souhaitez une collaboration ou explorer de nouvelles opportunités ? 
             Je suis à votre disposition ! N'hésitez pas à me contacter.
           </p>
-       <form action="" method="post"> 
+       <form action="https://getform.io/f/awnyprlb" method="post"> 
           <fieldset>
             <div class="formulaire">
               <label for="nom">Prenom </label>
@@ -225,7 +225,7 @@ document.addEventListener('DOMContentLoaded', function() {
             </div>
             <div class="formulaire">
               <label for="message">Message complémentaire:</label>
-              <textarea id="message" nom="message" rows="3" required placeholder="message"></textarea>
+              <textarea id="message" name="message" rows="3" required placeholder="message"></textarea>
             </div>
                <div class="formulaire">
             <button type="submit" class="btn-envoyer">Envoyer le message</button>
